force-app/main/default/objects/Opportunity_Pipeline_Snapshot_Vitals__c/Opportunity_Pipeline_Snapshot_Vitals__c.object-meta.xml
<CustomObject>
    <label>Opportunity Pipeline Snapshot-Vitals</label>
    <nameField>
        <label>Opportunity Pipeline Snapshot-Vitals Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Pipeline Snapshot-Vitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>