force-app/main/default/objects/Opportunity_Pipeline_Snapshot_Vitals__c/fields/Amount_converted__c.field-meta.xml
<CustomField>
    <fullName>Amount_converted__c</fullName>
    <label>Amount (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>