force-app/main/default/objects/Opportunity_Pipeline_Snapshot_Vitals__c/fields/Facility_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Facility_State_Province__c</fullName>
    <label>Facility State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>