force-app/main/default/objects/Opportunity_Pipeline_Snapshot_Vitals__c/fields/Sales_Hierarchy_3__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hierarchy_3__c</fullName>
    <label>Sales Hierarchy 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>