force-app/main/default/objects/Opportunity_Pipeline_Snapshot_Vitals__c/fields/Total_Price_converted__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_converted__c</fullName>
    <label>Total Price (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>